S&R: Do not do "\t" -> '\t' and similar for regex captures

BUG: 462220
FIXED-IN: 22.12